--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,22 @@ version: '2'
 
 services:
   simply-ci:
-    image: nginx:alpine
-    volumes:
-     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    image: simply-ci/gui
     ports:
       - "80:80"
     links:
       - builds
       - events
       - repositories
-    container_name: simply-ci
+    container_name: gui
 
   builds:
     image: simply-ci/builds
-    container_name: simply-ci-builds
+    container_name: builds
   
   events:
     image: simply-ci/events
-    container_name: simply-ci-events
+    container_name: events
   
   repositories:
     image: simply-ci/repositories
@@ -27,7 +25,7 @@ services:
       - repositories:/repositories
     links:
       - events
-    container_name: simply-ci-repositories
+    container_name: repositories
 
 volumes:
   repositories:
