--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -10,27 +10,12 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>events</artifactId>
-	<name>Simply CI Events Service</name>
+	<artifactId>gui</artifactId>
+	<name>Simply CI GUI</name>
 	<packaging>jar</packaging>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-hateoas</artifactId>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
