--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,10 @@
 	</properties>
 
 	<modules>
-		<module>repositories</module>
+		<module>gui</module>
 		<module>builds</module>
 		<module>events</module>
+		<module>repositories</module>
 	</modules>
 	
 	<dependencyManagement>
@@ -77,13 +78,9 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<!--<version>3.1</version>-->
+				<version>3.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -93,7 +90,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<!--<version>2.6</version>-->
+				<version>2.6</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 				</configuration>
